@@ -605,7 +605,7 @@ QPDFWriter exclude from object stream 0
 QPDF_pages findPage not found 0
 QPDFJob overlay page with no resources 0
 QPDFObjectHandle check ownership 0
-QPDFJob weak crypto warning 0
+QPDFJob weak crypto error 0
 qpdf-c called qpdf_oh_is_initialized 0
 qpdf-c registered progress reporter 0
 qpdf-c called qpdf_oh_new_uninitialized 0
